--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "dotenv": "^17.2.3",
+    "react-use": "^17.6.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
@@ -31,12 +32,12 @@
     "@types/socket.io": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
+    "concurrently": "^8.2.0",
     "eslint": "^9.38.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.6",
-    "concurrently": "^8.2.0",
     "typescript": "^5.9.3"
   }
 }
