--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   },
   "dependencies": {
     "dotenv": "^17.2.3",
+    "luxon": "^3.7.2",
     "react-use": "^17.6.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@types/luxon": "^3.7.1",
     "@types/node": "^24.9.1",
     "@types/socket.io": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
