Move game logic to shared directory and update imports
Refactored core game logic files from client/src/logic to shared/src for better code reuse. Updated TypeScript config to include shared sources. Adjusted imports in components and views to reference the new shared location. Removed obsolete types.ts and relocated relevant types to shared modules.

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -27,6 +27,11 @@
         "noUncheckedSideEffectImports": true
     },
     "include": [
-        "src"
+        "src",
+        "../shared/src/board.ts",
+        "../shared/src/cards.ts",
+        "../shared/src/character.ts",
+        "../shared/src/haunt.ts",
+        "../shared/src/player.ts"
     ]
 }
