Add postinstall script and update dev workflow
Introduces a postinstall script to build the shared package after dependencies are installed. The dev script is updated to remove the clean and build steps for shared, streamlining the development workflow.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run clean --prefix shared && npm run build --prefix shared && concurrently \"npm run watch --prefix shared\" \"npm run dev --prefix client\" \"npm run dev --prefix server\""
+    "dev": "concurrently \"npm run watch --prefix shared\" \"npm run dev --prefix client\" \"npm run dev --prefix server\"",
+    "postinstall": "npm run build --prefix shared"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
